# koreader-syncd

./: .envrc  Cargo.toml  LICENSE  README.md  devenv.nix  flake.nix
.github/workflows/: ci.yml
migrations/: 01_init.sql
src/: api.rs  args.rs  main.rs
