[package]
name = "koreader-syncd"
version = "0.1.0"
authors = [
  "Pavel Borzenkov <pavel@borzenkov.net>"
]
edition = "2021"
description = "KOReader progress sync server"
repository = "https://github.com/pborzenkov/koreader-syncd"
license = "MIT"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.7", features = ["json", "macros", "tokio"] }
clap = { version = "4.5", features = ["cargo", "derive"] }
clap-verbosity-flag = "2.2"
log = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive", "std"] }
sqlx = { version = "0.8", features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
hyper = "1.1"
http-body-util = "0.1"
mime = "0.3"
serde_json = "1.0"
tower = "0.4"

[lints.rust]
warnings = "deny"
